--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2783,7 +2783,7 @@
                                     <div 
                                     v-for="(manga, index) in selectedEpisode.EpisodeMangasIDs" 
                                     :key="manga.MangaNumber" 
-                                    class="relative flex items-center"
+                                    class="relative flex flex-col gap-4"
                                     >
                                     <button
                                         :disabled="manga.status === 'success'"
