--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2945,23 +2945,36 @@
                                     <p class="text-lg">{{ selectedEpisode.EpisodeNotes }}</p>
                                 </fieldset>
 
-                                <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeVideosIDs !== null" class="border p-2 rounded mb-2">
-                                    <legend class="font-bold text-lg">مشاهدة (عبر البوت)</legend>
-                                    <div class="flex flex-col justify-center gap-4">
-                                        <button
-                                            v-for="(video, index) in selectedEpisode.EpisodeVideosIDs"
-                                            :key="video.VideoID"
-                                            :disabled="video.status === 'success'"
-                                            @click="() => { sendEpisodeToBot(video.VideoID, video.Resolution, index); }"
-                                            class="relative bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50"
-                                        >
-                                            {{ video.Resolution }} ({{ video.Size }} MB)
-                                            <img v-if="video.status === 'success'" src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png" 
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2" />
-                                            <img v-if="video.status === 'error'" src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" 
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2" />
-                                        </button>
+                                <fieldset
+                                v-if="selectedEpisode && selectedEpisode.EpisodeVideosIDs !== null"
+                                class="border p-2 rounded mb-2"
+                                >
+                                <legend class="font-bold text-lg">مشاهدة (عبر البوت)</legend>
+                                <div class="flex flex-col justify-center gap-4">
+                                    <div 
+                                    v-for="(video, index) in selectedEpisode.EpisodeVideosIDs" 
+                                    :key="video.VideoID" 
+                                    class="relative flex flex-col gap-4"
+                                    >
+                                    <button
+                                        :disabled="video.status === 'success'"
+                                        @click="() => { sendEpisodeToBot(video.VideoID, video.Resolution, index); }"
+                                        class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50"
+                                    >
+                                        {{ video.Resolution }} ({{ video.Size }} MB)
+                                    </button>
+                                    <img 
+                                        v-if="video.status === 'success'" 
+                                        src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png" 
+                                        class="absolute right-0 top-0 w-6 h-6 ml-2"
+                                    />
+                                    <img 
+                                        v-if="video.status === 'error'" 
+                                        src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" 
+                                        class="absolute right-0 top-0 w-6 h-6 ml-2"
+                                    />
                                     </div>
+                                </div>
                                 </fieldset>
 
                             </div>
