--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2877,7 +2877,7 @@
                                                 <span class="tooltip-text">ذكريات من الماضي</span>
                                             </div>
                                         </template>
-                                        <template v-else-if="selectedEpisode.EpisodeFilterAdvanced.includes('14HH')">
+                                        <template v-else-if="char === 'ه'">
                                             <div class="tooltip-container inline-block h-6 w-6 mr-1">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/PlotHH.png" 
                                                     alt="هيجي هاتوري، " 
