--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -154,9 +154,9 @@
                                 <input type="password" id="userToken" placeholder="أدخل رمز التفعيل"
                                     style="padding: 10px; margin: 10px; width: 80%; max-width: 300px; font-size: 18px; font-weight: bold;
                                     border: 2px solid white; border-radius: 5px;">
-                                <!--<button id="pasteButton"
+                                <button id="pasteButton"
                                     style="padding: 10px 20px; background-color: #28a745; color: white;
-                                    border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold;">لصق</button>-->
+                                    border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold;">لصق</button>
                             </div>
                             <button id="validateButton"
                                 style="padding: 10px 20px; background-color: #007BFF; color: white;
