--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -158,15 +158,7 @@
                                 border: none; border-radius: 5px; margin-bottom: 20px; cursor: pointer; font-size: 18px; font-weight: bold;">تحقق</button>
                                 <p id="responseMessage" style="color: red; margin-top: 10px; margin-bottom: 10px; font-size: 18px; font-weight: bold;"></p>
                                 <h1 style="font-size: 18px; margin-top: 60px; margin-bottom: 20px; font-weight: bold;">شرح طريقة الحصول على رمز التفعيل 👇</h1>
-                                <p style="color: white; margin-top: 10px; margin-bottom: 10px; font-size: 18px; font-weight: bold;">
-                                1- قم بالذهاب للبوت 
-                                <a href="https://t.me/DCRef_bot?text=/key" style="color: green; font-size: 20px; ">من هنا</a><br><br>
-                                2- أرسل الرسالة أو أضغط على key/<br><br>
-                                3- أنضم للقناة التي في الرسالة ثم أرجع للسابق أو أرجع إلى البوت.<br><br>
-                                4- تأكد من أن الدليل مغلق (الصفحة الحالية).<br><br>
-                                5- أضغط على زر "أضغط هنا لتفعيل الدليل" في البوت.<br><br>
-                                سوف يتم فتح الدليل ويتم التحقق في حال أنضمامك إلى القناة سوف يتم تحويلك إلى الدليل.
-                            </p>
+
                         </div>
                     `;
                 const userTokenInput = document.getElementById('userToken');
@@ -367,7 +359,7 @@
         }
     
         /* Disable drag functionality */
-        img {
+        img, a {
             -webkit-user-drag: none; /* Disable dragging of images and links */
             pointer-events: none;
         }
