--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2798,7 +2798,7 @@
                                         @click="() => { sendMangaToBot(manga.MangaFileID, manga.MangaNumber, index); }"
                                         class="bg-green-500 text-white px-6 py-2 rounded hover:bg-green-700 flex items-center justify-center shadow-md disabled:opacity-50"
                                     >
-                                        ({{ manga.MangaFileSize }} MB) {{ manga.MangaNumber }}
+                                        (MB {{ manga.MangaFileSize }}) {{ manga.MangaNumber }}
                                     </button>
                                     <img 
                                         v-if="manga.status === 'success'" 
