--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -291,7 +291,7 @@
                     })
                     .catch((error) => {
                         console.error("Error during initial token validation:", error);
-                        showValidationBody();
+                        //showValidationBody();
                     });
             } else {
                 // If no token in localStorage or cookie, show the validation body
