--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
+<script src="https://telegram.org/js/telegram-web-app.js?56"></script>    
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const MAX_ATTEMPTS = 3;
@@ -53,6 +54,17 @@
 
             let attempts = parseInt(localStorage.getItem('attempts') || '0', 10);
             let lockoutEnd = localStorage.getItem('lockoutEnd');
+
+             // Extract user ID from Telegram WebApp
+            const webApp = window.Telegram.WebApp;
+            let telegramUserId = null;
+    
+            if (webApp && webApp.initDataUnsafe && webApp.initDataUnsafe.user) {
+                telegramUserId = webApp.initDataUnsafe.user.id;
+                alert(`TUID: ${telegramUserId}`);
+            } else {
+                alert("Telegram WebApp not available.");
+            }
 
             // Function to decrypt the provided token
             function decryptCode(encryptedString) {
