--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -61,9 +61,9 @@
     
             if (webApp && webApp.initDataUnsafe && webApp.initDataUnsafe.user) {
                 telegramUserId = webApp.initDataUnsafe.user.id;
-                alert(`TUID: ${telegramUserId}`);
+                //alert(`TUID: ${telegramUserId}`);
             } else {
-                alert("Telegram WebApp not available.");
+                //alert("Telegram WebApp not available.");
             }
 
             // Function to decrypt the provided token
