--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+        <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <script>
         document.addEventListener("DOMContentLoaded", async () => {
             const webApp = window.Telegram.WebApp;
             const telegramUserId = webApp.initDataUnsafe.user.id;
+            const localStorageKey = 'AreTheUserJoinToTheChannel';
 
             try {
                 const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
@@ -17,33 +18,17 @@
                 const result = await response.json();
 
                 if (result.valid) {
+                    localStorage.setItem(localStorageKey, telegramUserId);
                     // User is valid, show the original content (hide the "not joined" message)
                     // Assuming the original content was initially hidden or will be loaded afterwards
                 } else {
+                    localStorage.removeItem(localStorageKey);
                     // User is not valid, show the "not joined" message
                     document.body.innerHTML = `
                         <div style="text-align: center; padding: 20px;">
-                            <div class="flex flex-col items-center justify-center" style="margin-bottom: 30px;">
-                                <div class="flex items-center">
-                                    <div class="flex flex-col items-center">
-                                        <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" class="icon-pointer" title="Channel">
-                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/TelegramChannel.png" alt="Channel" class="h-12 w-12">
-                                            <span class="text-center m-1 font-bold text-lg block">القناة</span>
-                                        </a>
-                                    </div>
-
-                                    <div class="w-12"></div>
-
-                                    <div class="flex flex-col items-center">
-                                        <a href="https://t.me/DCRef_bot" target="_blank" rel="noopener noreferrer" class="icon-pointer" title="Bot">
-                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/TelegramBot.png" alt="Bot" class="h-12 w-12">
-                                            <span class="text-center m-1 font-bold text-lg block">البوت</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <h1 style="font-size: 18px; font-weight: bold;">لست منضماً إلى القناة. الرجاء الانضمام <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: blue; text-decoration: none;">من هنا</a></h1>
-                            <button id="retryButton" style="padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 10px;">أعد المحاولة</button>
+                            <br><br><br>
+                            <h1 style="font-size: 20px; font-weight: bold; color: red;">لست منضماً إلى القناة.<br><span style="font-size: 20px; font-weight: bold;">الرجاء الانضمام</span> <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">من هنا</a></h1>
+                            <button id="retryButton" style="padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 20px; margin-top: 10px;">أعد المحاولة</button>
                         </div>
                     `;
 
@@ -53,11 +38,12 @@
                 }
             } catch (error) {
                 console.error("Error during validation:", error);
+                localStorage.removeItem(localStorageKey);
                 // Handle error appropriately, perhaps show a message to the user
                 document.body.innerHTML = `<div style="text-align: center; padding: 20px;"><p style="color: red; font-weight: bold;">حدث خطأ في التحقق. الرجاء المحاولة لاحقًا.</p></div>`;
             }
         });
-    </script>    
+    </script>   
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
