--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -27,7 +27,7 @@
                     document.body.innerHTML = `
                         <div style="text-align: center; padding: 20px;">
                             <br><br><br>
-                            <h1 style="font-size: 20px; font-weight: bold; color: red;">لست منضماً إلى القناة.<br><br><span style="font-size: 22px; font-weight: bold; color: white;">الرجاء الانضمام</span> <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">من هنا</a></h1><br><br>
+                            <h1 style="font-size: 26px; font-weight: bold; color: red;">لست منضماً إلى القناة.<br><span style="font-size: 26px; font-weight: bold; color: white;">الرجاء الانضمام</span> <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">من هنا</a></h1><br>
                             <button id="retryButton" style="padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 20px; margin-top: 10px; font-weight: bold;">أعد المحاولة</button>
                         </div>
                     `;
