--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-        <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", async () => {
-            const webApp = window.Telegram.WebApp;
-            const telegramUserId = webApp.initDataUnsafe.user.id;
-            const localStorageKey = 'AreTheUserJoinToTheChannel';
+<script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", async () => {
+        const webApp = window.Telegram.WebApp;
+        const telegramUserId = webApp.initDataUnsafe.user.id;
+        const localStorageKey = 'AreTheUserJoinToTheChannel';
 
-            try {
-                const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ token: telegramUserId })
-                });
+        try {
+            const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ token: telegramUserId })
+            });
 
-                const result = await response.json();
+            const result = await response.json();
 
-                if (result.valid) {
-                    localStorage.setItem(localStorageKey, telegramUserId);
-                    // User is valid, show the original content (hide the "not joined" message)
-                    // Assuming the original content was initially hidden or will be loaded afterwards
-                } else {
-                    localStorage.removeItem(localStorageKey);
-                    // User is not valid, show the "not joined" message
-                    document.body.innerHTML = `
-                        <div style="text-align: center; padding: 20px;">
-                            <br><br><br>
-                            <h1 style="font-size: 26px; font-weight: bold; color: red;">لست منضماً إلى القناة.<br><span style="font-size: 26px; font-weight: bold; color: white;">الرجاء الانضمام</span> <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">من هنا</a></h1><br>
-                            <button id="retryButton" style="padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 20px; margin-top: 10px; font-weight: bold;">أعد المحاولة</button>
-                        </div>
-                    `;
-
-                    document.getElementById('retryButton').addEventListener('click', () => {
-                        window.location.reload();
-                    });
-                }
-            } catch (error) {
-                console.error("Error during validation:", error);
+            if (result.valid) {
+                localStorage.setItem(localStorageKey, telegramUserId);
+                // User is valid, show the original content (hide the "not joined" message)
+            } else {
                 localStorage.removeItem(localStorageKey);
-                // Handle error appropriately, perhaps show a message to the user
-                document.body.innerHTML = `<div style="text-align: center; padding: 20px;"><p style="color: red; font-weight: bold;">حدث خطأ في التحقق. الرجاء المحاولة لاحقًا.</p></div>`;
+                // User is not valid, show the "not joined" message
+                document.body.innerHTML = `
+                    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
+                        <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
+                            <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">لست منضماً إلى القناة.<br>
+                                <span style="font-size: 26px; font-weight: bold; color: #ffffff;">الرجاء الانضمام</span>
+                                <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">من هنا</a>
+                            </h1>
+                            <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
+                                أعد المحاولة
+                            </button>
+                        </div>
+                    </div>
+                    <style>
+                        @keyframes fadeIn {
+                            from { opacity: 0; }
+                            to { opacity: 1; }
+                        }
+                        @keyframes slideDown {
+                            from { transform: translateY(-50px); opacity: 0; }
+                            to { transform: translateY(0); opacity: 1; }
+                        }
+                        #retryButton:hover {
+                            transform: scale(1.1);
+                            box-shadow: 0 5px 15px rgba(0, 123, 255, 0.6);
+                        }
+                    </style>
+                `;
+
+                document.getElementById('retryButton').addEventListener('click', () => {
+                    window.location.reload();
+                });
             }
-        });
-    </script>   
+        } catch (error) {
+            console.error("Error during validation:", error);
+            localStorage.removeItem(localStorageKey);
+            // Handle error appropriately, perhaps show a message to the user
+            document.body.innerHTML = `<div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #ff4f4f, #ff7575); text-align: center; color: #fff; font-weight: bold; animation: fadeIn 1s;">
+                <p>حدث خطأ في التحقق. الرجاء المحاولة لاحقًا.</p>
+            </div>`;
+        }
+    });
+</script>   
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KNKPH3ZEY5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -7093,6 +7114,8 @@
                 },
 
                 loadData() {
+                    const areJoined = localStorage.getItem('AreTheUserJoinToTheChannel');
+                    if (areJoined && areJoined.trim() !== '') {  
                         // Reset states before attempting to fetch
                         this.episodes = [];
                         this.error = null;
@@ -7162,7 +7185,11 @@
                                     this.error = 'حدث خطأ أثناء محاولة تحميل البيانات. قد تكون هناك مشكلة مؤقتة في الاتصال أو الخادم. يُرجى التحقق من اتصالك بالإنترنت أو أستخدم VPN والمحاولة مرة أخرى.';
                                 }
                                 this.loading = false;
-                            });    
+                            });
+                    } else {
+                        console.log("not loading data.");
+                        this.loading = false;
+                    }    
                 },
 
                 startTimer() {
@@ -8114,7 +8141,10 @@
 
             },
             mounted() {
+                    const areJoined = localStorage.getItem('AreTheUserJoinToTheChannel');
+                if (areJoined && areJoined.trim() !== '') {
                     this.loadData();
+                }
 
                 window.addEventListener('click', (event) => {
                     const modal = document.getElementById('episodeModal');
