--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -60,7 +60,13 @@
             localStorage.removeItem(localStorageKey);
             // Handle error appropriately, perhaps show a message to the user
             document.body.innerHTML = `<div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #ff4f4f, #ff7575); text-align: center; color: #fff; font-weight: bold; animation: fadeIn 1s;">
-                <p>حدث خطأ في التحقق. الرجاء المحاولة لاحقًا.</p>
+                        <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
+                            <h1 style="font-size: 26px; font-weight: bold; color: #ffffff; margin-bottom: 10px;">حدث خطأ في التحقق. الرجاء المحاولة لاحقًا.<br>
+                            </h1>
+                            <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
+                                أعد المحاولة
+                            </button>
+                        </div>
             </div>`;
         }
     });
