--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -24,7 +24,7 @@
                 localStorage.removeItem(localStorageKey);
                 // User is not valid, show the "not joined" message
                 document.body.innerHTML = `
-                    <div style="display: flex; justify-content: center; align-items: center; min-height: 100%; height: 100%; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
+                    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
                         <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
                             <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">لست منضماً إلى القناة.<br>
                                 <span style="font-size: 26px; font-weight: bold; color: #ffffff;">الرجاء الانضمام</span>
@@ -45,7 +45,7 @@
             localStorage.removeItem(localStorageKey);
             // Show error message with retry button
             document.body.innerHTML = `
-                <div style="display: flex; justify-content: center; align-items: center; min-height: 100%; height: 100%; background: linear-gradient(135deg, #ff4f4f, #ff7575); animation: fadeIn 1s;">
+                <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #ff4f4f, #ff7575); animation: fadeIn 1s;">
                     <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
                         <p style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 20px;">حدث خطأ في التحقق. الرجاء المحاولة لاحقًا.</p>
                         <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; transition: transform 0.3s, box-shadow 0.3s;">
