--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9803,45 +9803,6 @@
                         throw new Error(`Failed to send manga: ${response.statusText}`);
                     }
                 },
-
-                openSpecificEpisode(episodeCode) {
-                    alert("Opening episode: " + episodeCode); // Debugging line
-                    const episodeNumber = parseInt(episodeCode, 10);
-                    console.log("Episode Number:", episodeNumber); // Log the episode number being used
-
-                    // Log the episodes array and check if it contains the desired episode
-                    console.log("Episodes:", this.episodes);
-
-                    const episode = this.episodes.find(ep => ep.EpisodeNumber === episodeNumber);
-
-                    if (episode) {
-                    console.log("Episode found:", episode); // Log the found episode
-                    this.selectedEpisode = episode;
-                    this.showModal = true;
-                    } else {
-                    console.log("Episode not found!");
-                    }
-
-                },
-
-                openSpecificEpisode(episodeCode) {
-                    alert("Opening episode: " + episodeCode); // Debugging line
-                    const episodeNumber = parseInt(episodeCode, 10);
-                    console.log("Episode Number:", episodeNumber); // Log the episode number being used
-
-                    // Log the episodes array and check if it contains the desired episode
-                    console.log("Episodes:", this.episodes);
-
-                    const episode = this.episodes.find(ep => ep.EpisodeNumber === episodeNumber);
-
-                    if (episode) {
-                    console.log("Episode found:", episode); // Log the found episode
-                    // Use the openModal function to show the episode modal
-                    this.openModal(episode);
-                    } else {
-                    console.log("Episode not found!");
-                    }
-                },
             },    
 
             mounted() {
@@ -9864,9 +9825,9 @@
                 const episodeCode = urlParams.get("code");
 
                 if (episodeCode) {
-                    alert("Episode Code: " + episodeCode);
+                    //alert("Episode Code: " + episodeCode);
                     console.log(this.episodes); // Check if episodes is populated
-                    this.openSpecificEpisode(episodeCode);
+                    this.openModal(episodeCode);
                 }
                 
             }
